tests/ui/wf/let-pat-inferred-non-wf.stderr
error[E0277]: the size for values of type `str` cannot be known at compilation time
  --> $DIR/let-pat-inferred-non-wf.rs:11:9
   |
LL |     let ref y @ [ref x, _];
   |         ^^^^^^^^^^^^^^^^^^ doesn't have a size known at compile-time
   |
   = help: the trait `Sized` is not implemented for `str`
   = note: slice and array elements must have `Sized` type

error[E0277]: the size for values of type `str` cannot be known at compilation time
  --> $DIR/let-pat-inferred-non-wf.rs:16:9
   |
LL |     let [ref x];
   |         ^^^^^^^ doesn't have a size known at compile-time
   |
   = help: the trait `Sized` is not implemented for `str`
   = note: slice and array elements must have `Sized` type

error[E0277]: the size for values of type `str` cannot be known at compilation time
  --> $DIR/let-pat-inferred-non-wf.rs:21:9
   |
LL |     let [[ref x], [_, y @ ..]];
   |         ^^^^^^^^^^^^^^^^^^^^^^ doesn't have a size known at compile-time
   |
   = help: the trait `Sized` is not implemented for `str`
   = note: slice and array elements must have `Sized` type

error[E0277]: the size for values of type `str` cannot be known at compilation time
  --> $DIR/let-pat-inferred-non-wf.rs:27:9
   |
LL |     let [(ref a, b), x];
   |         ^^^^^^^^^^^^^^^ doesn't have a size known at compile-time
   |
   = help: the trait `Sized` is not implemented for `str`
   = note: only the last element of a tuple may have a dynamically sized type

error[E0277]: the size for values of type `str` cannot be known at compilation time
  --> $DIR/let-pat-inferred-non-wf.rs:33:9
   |
LL |     let (ref a, b);
   |         ^^^^^^^^^^ doesn't have a size known at compile-time
   |
   = help: the trait `Sized` is not implemented for `str`
   = note: only the last element of a tuple may have a dynamically sized type

error[E0277]: the size for values of type `str` cannot be known at compilation time
  --> $DIR/let-pat-inferred-non-wf.rs:39:9
   |
LL |     let [S(ref x)];
   |         ^^^^^^^^^^ doesn't have a size known at compile-time
   |
   = help: within `S<str>`, the trait `Sized` is not implemented for `str`
note: required because it appears within the type `S<str>`
  --> $DIR/let-pat-inferred-non-wf.rs:8:8
   |
LL | struct S<T: ?Sized>(T);
   |        ^
   = note: slice and array elements must have `Sized` type

error: aborting due to 6 previous errors

For more information about this error, try `rustc --explain E0277`.
